<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        tools:text="@string/id" />

    <EditText
        android:id="@+id/edtidproducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        tools:text="@string/nombrepro" />

    <EditText
        android:id="@+id/edtnombrepro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/nombrepro"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="24sp"
        tools:text="@string/precio" />

    <EditText
        android:id="@+id/edtprecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/precio"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text=""
        android:textSize="24sp"
        tools:text="@string/costo" />

    <EditText
        android:id="@+id/edtcosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/costo"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnconsultar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_consultar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_eliminar"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnlistado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_listado"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btnactualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_actualizar"
        android:textSize="24sp" />
</LinearLayout>